fixed the input form spacing for add column

--- a/src/App.css
+++ b/src/App.css
@@ -134,7 +134,7 @@ button:disabled {
 .add-column-form input {
   font-size: 16px;
   padding: 5px;
-  margin: 0 8px 0 0px;
+  margin: 0 8px 0 10px;
   border-radius: 3px;
   border: 1px solid #dddd
 }
